# rust-wasm-docker-hello-world

./: .gitignore  Cargo.toml  Dockerfile  README.md
html/: index.html
src/: lib.rs  main.rs
