[package]
name = "rust-wasm-docker-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wasm-bindgen = "0.2.63"  ##ENABLE THIS FOR WEBAPP ONLY

[lib]
#crate-type = ["cdylib"]  ##ENABLE THIS FOR WEBAPP ONLY